Modified footer and header and simplified main nav

--- a/CRUD & Authentication/WebProject/server/views/partials/footer.ejs
+++ b/CRUD & Authentication/WebProject/server/views/partials/footer.ejs
@@ -1,8 +1,10 @@
-<footer>
-      <nav class="navbar fixed-bottom navbar-dark bg-dark">
-        <h6 class="navbar-text">&copy; Copyright 2025. All rights reserved</h6>
-      </nav>
+    <footer class="bg-dark text-light py-3 mt-5">
+      <div class="container text-center small">
+        © <%= new Date().getFullYear() %> BookTrack – INFR3120 Assignment 3
+      </div>
     </footer>
+    <script src="/jquery/dist/jquery.min.js"></script>
+    <script src="/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/Script/app.js"></script>
   </body>
 </html>
