--- a/CRUD & Authentication/WebProject/server/views/partials/header.ejs
+++ b/CRUD & Authentication/WebProject/server/views/partials/header.ejs
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/Content/app.css' />
-    <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/@fortawesome/fontawesome-free/css/all.min.css">
-    <script src="/jquery/dist/jquery.min.js"></script>
-    <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
+    <meta charset="utf-8" />
+    <title><%= title %> | BookTrack</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css" />
+    <!-- Font Awesome (from starter) -->
+    <link rel="stylesheet" href="/@fortawesome/fontawesome-free/css/all.min.css" />
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="/Content/app.css" />
   </head>
   <body>
