--- a/CRUD & Authentication/WebProject/server/views/partials/main_nav.ejs
+++ b/CRUD & Authentication/WebProject/server/views/partials/main_nav.ejs
@@ -1,70 +1,45 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-    <a class="navbar-brand" href="/">INFR3120</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <div class="container">
+    <a class="navbar-brand" href="/">BookTrack</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarNav" aria-controls="navbarNav"
+            aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <% if(title=="Home") { %>
-            <a class="nav-link active" aria-current="page" href="/home"><i class="fa-solid fa-lg fa-house"></i> Home</a>
-          <% } else { %>
-            <a class="nav-link" aria-current="page" href="/home"><i class="fa-solid fa-lg fa-house"></i> Home</a>
-          <% } %>
+          <a class="nav-link" href="/">Home</a>
         </li>
         <li class="nav-item">
-          <% if(title=="About us") { %>
-            <a class="nav-link active" aria-current="page" href="/about"><i class="fa-solid fa-lg fa-circle-info"></i> About</a>
-          <% } else { %>
-            <a class="nav-link" aria-current="page" href="/about"><i class="fa-solid fa-lg fa-circle-info"></i> About</a>
-          <% } %>
+          <a class="nav-link" href="/books">Books</a>
         </li>
         <li class="nav-item">
-          <% if(title=="Products") { %>
-            <a class="nav-link active" aria-current="page" href="/products"><i class="fa-brands fa-lg fa-elementor"></i> Products</a>
-          <% } else { %>
-            <a class="nav-link" aria-current="page" href="/products"><i class="fa-brands fa-lg fa-elementor"></i> Products</a>
-          <% } %>
+          <a class="nav-link" href="/about">About</a>
         </li>
         <li class="nav-item">
-        <% if(title=="Services") { %>
-          <a class="nav-link active" aria-current="page" href="/services"><i class="fa-solid fa-lg fa-gears"></i> Services</a>
-        <% } else { %>
-          <a class="nav-link" aria-current="page" href="/services"><i class="fa-solid fa-lg fa-gears"></i> Services</a>
-        <% } %>
+          <a class="nav-link" href="/contact">Contact</a>
         </li>
-        <li class="nav-item">
-        <% if(title=="Books") { %>
-          <a class="nav-link active" aria-current="page" href="/books"><i class="fa-solid fa-lg fa-book"></i> Books</a>
-        <% } else { %>
-          <a class="nav-link" aria-current="page" href="/books"><i class="fa-solid fa-lg fa-book"></i> Books</a>
-        <% } %>
-        </li>
-        <li class="nav-item">
-          <% if(title=="Contact us") { %>
-            <a class="nav-link active" aria-current="page" href="/contact"><i class="fa-solid fa-lg fa-phone"></i> Contact us</a>
-          <% } else { %>
-            <a class="nav-link" aria-current="page" href="/contact"><i class="fa-solid fa-lg fa-phone"></i> Contact us</a>
-          <% } %>
-        </li>
-        <% if(typeof displayName=='string' && displayName) { %>
-          <li class="navbar-text">
-            <i class="fas fa-lg fa-user"></i>
-            Welcome, <%= displayName %>
+      </ul>
+      <ul class="navbar-nav ms-auto">
+        <% if (displayName) { %>
+          <li class="nav-item">
+            <span class="navbar-text me-2">
+              Welcome, <%= displayName %>
+            </span>
           </li>
           <li class="nav-item">
-            <a href="/logout" class="nav-link">
-              <i class="fas fa-lg fa-sign-out-alt"></i> Logout
-            </a>
+            <a class="nav-link" href="/logout">Logout</a>
           </li>
         <% } else { %>
-        <li class="nav-item">
-          <a href="/login" class="nav-link">
-            <i class="fas fa-lg fa-sign-in-alt"></i> Login
-          </a>
-        </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/login">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/register">Register</a>
+          </li>
         <% } %>
+      </ul>
     </div>
   </div>
 </nav>
